--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
- 	background: linear-gradient(270deg, #cca9bc, #b8a3bc, #aca4c4);
+ 	background: linear-gradient(270deg, #fec5bb, #fcd5ce, #fae1dd);
 		-webkit-animation: AnimationName 30s ease infinite;
 		-moz-animation: AnimationName 30s ease infinite;
 		animation: AnimationName 30s ease infinite;
