--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .box-content {
-    background: ##4C3D44;
+    background: #4C3D44;
     height: 440px;
     width: 400px;
     padding: 20px;
